# foxMeido

./: .env.example  .env.prod  .gitignore  pyproject.toml  readme.md
data/cookies/: steam_playwright.json.example
plugins/: auto_pull.py  cs.py  curator_monitor.py  dota.py  error_logger.py  finder.py  help.py  message_reaction.py  noco_utils.py  ping.py  playwright_utils.py  prase.py  reaction_utils.py  steamFinder.py  steamFinderAuto.py  steamPublisherFinder.py  steamPublisherFinderAuto.py  steamSearcher.py  steam_utils.py
plugins/noco/: README.md  __init__.py  bind.py  calendar.py  createTables.sql  error_logger.py  get.py  noco_config.py  noco_utils.py  playwright_utils.py  probe.py  queryWishlist.py  remain.py  report.py  temaple.db  unfinished.py  unreported.py  wish.py
scripts/: get_steam_cookies.py
