[project]
name = "foxMeido"
version = "0.1.0"
description = "foxMeido"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["nonebot_plugin_alconna", "nonebot_plugin_apscheduler"]
plugin_dirs = ["plugins"]

# plugin_dirs = ["plugins", "plugins/noco"]
# 附加内容

builtin_plugins = ["echo"]
